--- a/public/stylesheets/Admin.css
+++ b/public/stylesheets/Admin.css
@@ -71,6 +71,14 @@ input[type="file"]{
     width: 85% !important;
 }
 
+[class*=sidebar-dark-] .nav-treeview>.nav-item>.nav-link {
+    padding-left: 2em;
+}
+
+[class*=sidebar-dark-] .nav-sidebar>.nav-item>.nav-treeview {
+    background-color: rgba(255,255,255,.1);
+}
+
 
 @media screen and (max-width: 767px) {
     #inputGroup-sizing-default {
