--- a/public/stylesheets/Admin.css
+++ b/public/stylesheets/Admin.css
@@ -91,16 +91,27 @@ input[type="file"] {
     display: none;
 }
 
+
 .relative.inline-flex.items-center.px-4.py-2.-ml-px.text-sm.font-medium.text-gray-700.bg-white.border.border-gray-300.leading-5 {
     display: unset;
+    transition: 0.5s ease-in-out;
 }
+
+.relative.inline-flex.items-center.px-4.py-2.-ml-px.text-sm.font-medium.text-gray-700.bg-white.border.border-gray-300.leading-5:hover {
+    background-color: #005ec2 !important;
+    color: #fff !important;
+}
+
 
 .relative.inline-flex.items-center.px-4.py-2.-ml-px.text-sm.font-medium.text-gray-500.bg-white.border.border-gray-300.cursor-default.leading-5 {
     display: unset;
+    cursor: not-allowed;
+    opacity: 0.7;
 }
 
+
+
 .pagination{
-    margin-top: 1em;
     width: 100% !important;
     display: flex;
     justify-content: center;
