--- a/public/stylesheets/Admin.css
+++ b/public/stylesheets/Admin.css
@@ -118,6 +118,15 @@ input[type="file"] {
 }
 
 
+.label{
+    margin: 0 1em !important;
+    display: flex;
+}
+
+.label input{
+    margin-right: .25em;
+}
+
 
 .relative.inline-flex.hover:text-gray-400.focus:z-10 .focus:outline-none .focus:ring .ring-gray-300 .focus:border-blue-300 .active:bg-gray-100 .active:text-gray-500
 .transition .ease-in-out .duration-150 .items-center .px-2 .py-2 .-ml-px .text-sm .font-medium .text-gray-500 .bg-white .border .border-gray-300 .rounded-r-md .leading-5 {
