--- a/public/stylesheets/Admin.css
+++ b/public/stylesheets/Admin.css
@@ -142,6 +142,10 @@ input[type="file"] {
     margin: 0em !important;
 }
 
+.checkuser{
+    width: 50%;
+}
+
 
 .relative.inline-flex.hover:text-gray-400.focus:z-10 .focus:outline-none .focus:ring .ring-gray-300 .focus:border-blue-300 .active:bg-gray-100 .active:text-gray-500
 .transition .ease-in-out .duration-150 .items-center .px-2 .py-2 .-ml-px .text-sm .font-medium .text-gray-500 .bg-white .border .border-gray-300 .rounded-r-md .leading-5 {
@@ -151,6 +155,10 @@ input[type="file"] {
 @media screen and (max-width: 460px) {
     body{
         font-size: .75em !important;
+    }
+
+    .checkuser{
+        width: 100%;
     }
 }
 
@@ -205,6 +213,13 @@ input[type="file"] {
         gap: 1em;
         display: grid;
     }
+    .checkuser{
+        width: 100%;
+    }
+
+    #not,#yes{
+        margin-top: 1.5em !important;
+    }
 
 }
 
@@ -244,6 +259,14 @@ input[type="file"] {
 
     .fixmobileuser2{
         width: 100% !important;
+    }
+
+    .checkuser{
+        width: 100%;
+    }
+
+    #not,#yes{
+        margin-top: 1em !important;
     }
 
 }
