--- a/public/stylesheets/Admin.css
+++ b/public/stylesheets/Admin.css
@@ -150,6 +150,10 @@ input[type="file"] {
     display: none;
 }
 
+.hideproduct{
+    display: none !important;
+}
+
 
 .relative.inline-flex.hover:text-gray-400.focus:z-10 .focus:outline-none .focus:ring .ring-gray-300 .focus:border-blue-300 .active:bg-gray-100 .active:text-gray-500
 .transition .ease-in-out .duration-150 .items-center .px-2 .py-2 .-ml-px .text-sm .font-medium .text-gray-500 .bg-white .border .border-gray-300 .rounded-r-md .leading-5 {
