--- a/public/stylesheets/User.css
+++ b/public/stylesheets/User.css
@@ -1131,3 +1131,23 @@ div.cart-collaterals ul.products li.product:hover .add_to_cart_button{background
     margin-left: 50px !important;
     margin-right: 50px !important;
 }
+
+.move-on-top{
+    position: fixed;
+    right: 25px;
+    bottom: 25px;
+    z-index: 10;
+}
+
+.move-on-top-btn{
+    width: 50px;
+    height: 50px;
+    background: rgb(59 193 181);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    font-size: 24px;
+    font-weight: 400;
+    color: #fff;
+}
