--- a/public/stylesheets/User.css
+++ b/public/stylesheets/User.css
@@ -1196,6 +1196,146 @@ div.cart-collaterals ul.products li.product:hover .add_to_cart_button{background
 }
 
 
+.content__form {
+    display: flex;
+    flex-direction: column;
+    row-gap: 14px;
+  }
+  
+  .content__inputs {
+    display: flex;
+    flex-direction: column;
+    row-gap: 8px;
+  }
+  
+  .content__form label {
+    border: 1px solid rgb(219, 219, 219);
+    display: flex;
+    align-items: center;
+    position: relative;
+    min-width: 268px;
+    height: 38px;
+    background: rgb(250, 250, 250);
+    border-radius: 3px;
+  }
+  
+  .content__form span {
+    position: absolute;
+    text-overflow: ellipsis;
+    transform-origin: left;
+    font-size: 12px;
+    left: 8px;
+    pointer-events: none;
+    transition: transform ease-out .1s
+  }
+  
+  .fixlineheight{
+    line-height: 1;
+  }
+  
+  .content__form input {
+    width: 100%;
+    background: inherit;
+    border: 1px solid rgb(219, 219, 219);
+    outline: none;
+    padding: 8px;
+    text-overflow: ellipsis;
+    font-size: 16px;
+    vertical-align: middle;
+  }
+  
+  .content__form input:valid+span , .content__form input:focus+span {
+    transform: scale(calc(10 / 12)) translateY(-20px);
+    padding: 0 4px;
+    background-color: white;
+  }
+  
+  .content__form input:valid ,.content__form input:focus  {
+    padding: 14px 0 2px 8px;
+    font-size: 12px;
+  }
+  
+  .content__or-text {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-transform: uppercase;
+    font-size: 13px;
+    column-gap: 18px;
+    margin-top: 18px;
+  }
+  
+  .content__or-text span:nth-child(3),
+  .content__or-text span:nth-child(1) {
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: rgb(219, 219, 219);
+  }
+  
+  .content__forgot-buttons {
+    display: flex;
+    flex-direction: column;
+    margin-top: 28px;
+    row-gap: 21px;
+  }
+  
+  .content__forgot-buttons button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 8px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 12px;
+    color: #00376b;
+  }
+  
+  .content__forgot-buttons button:first-child {
+    color: #385185;
+    font-size: 14px;
+    font-weight: 600;
+  }
+  
+  .content__form button {
+    background: rgb(0, 149, 246);
+    color: white;
+    border: none;
+    border-radius: 8px;
+    font-weight: 700;
+    font-size: 14px;
+    padding: 7px 16px;
+    cursor: pointer;
+  }
+  
+  .content__form button:hover {
+    background: rgb(24, 119, 242);
+  }
+  
+  .content__form button:active:not(:hover) {
+    background: rgb(0, 149, 246);
+    opacity: .7;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media screen and (max-width: 767px) {
     .gridlist{
         grid-template-columns: repeat(1, 1fr); /* Ba cột bằng nhau */
@@ -1211,3 +1351,4 @@ div.cart-collaterals ul.products li.product:hover .add_to_cart_button{background
         display: grid;
     }
 }
+
