--- a/public/stylesheets/User.css
+++ b/public/stylesheets/User.css
@@ -1042,7 +1042,7 @@ input[type="submit"]:hover, button[type=submit]:hover {
     background: none repeat scroll 0 0 #5a88ca;
     border: medium none;
     color: #fff;
-    padding: 6px 25px;
+    padding: 11px 25px;
     display: inline-block
 }
 
@@ -1652,6 +1652,19 @@ div.cart-collaterals ul.products li.product:hover .add_to_cart_button {
 }
 
 
+.box{
+    padding: 2em;
+    border: 1px solid black;
+    background-color: transparent;
+    margin-bottom: 3em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.box i{
+    font-size: 5em !important;
+}
 
 
 
