--- a/public/stylesheets/User.css
+++ b/public/stylesheets/User.css
@@ -1697,6 +1697,38 @@ div.cart-collaterals ul.products li.product:hover .add_to_cart_button {
 }
 
 
+.star-rating {
+    justify-content: space-between;
+    display: flex;
+flex-direction: row-reverse;
+width: 7em;
+
+  }
+  
+  .star-rating input {
+    display:none;
+    
+  }
+  
+  .star-rating label {
+    color:#ccc;
+    cursor:pointer;
+    font-size: 1.5em;
+  }
+  
+  .star-rating :checked ~ label {
+    color:#333;
+  }
+  
+  .star-rating label:hover,
+  .star-rating label:hover ~ label {
+    color:#333;
+  }
+
+  .noidung3{
+    font-weight: bold;
+  }
+
 
 @media screen and (max-width: 767px) {
     .gridlist {
