--- a/public/stylesheets/User.css
+++ b/public/stylesheets/User.css
@@ -875,9 +875,9 @@ ol.slide-indicators li.active {
     margin: 10px 0 0;
 }
 
-/* .product-big-title-area {
-    background: url(img/crossword.png) repeat scroll 0 0 #5a88ca
-} */
+.product-big-title-area {
+    background: url(../image/example/crossword.png) repeat scroll 0 0 #5a88ca
+}
 
 .product-bit-title h2 {
     font-family: raleway;
