--- a/public/stylesheets/User.css
+++ b/public/stylesheets/User.css
@@ -1730,6 +1730,31 @@ div.cart-collaterals ul.products li.product:hover .add_to_cart_button {
     font-weight: bold;
 }
 
+.btnchangeuser {
+    background: none repeat scroll 0 0 #5a88ca;
+    border: 1px solid white;
+    color: #fff;
+    padding: 11px 20px;
+    transition: 0.5s ease-in-out;
+    text-transform: uppercase;
+}
+
+.btnchangeuser:hover {
+    background: white;
+    border: 1px solid #5a88ca;
+    color: #5a88ca;
+}
+
+.btnchangeuser.active {
+    background: white;
+    border: 1px solid #5a88ca;
+    color: #5a88ca;
+}
+
+#container2,#container3{
+    display: none;
+}
+
 
 @media screen and (max-width: 767px) {
     .gridlist {
