--- a/public/stylesheets/User.css
+++ b/public/stylesheets/User.css
@@ -1756,6 +1756,11 @@ div.cart-collaterals ul.products li.product:hover .add_to_cart_button {
     justify-content: space-between;
 }
 
+#container3{
+    display: flex;
+    justify-content: center;
+}
+
 
 
 
