--- a/public/stylesheets/User.css
+++ b/public/stylesheets/User.css
@@ -1794,6 +1794,10 @@ a:focus{
     height: 270px !important;
 }
 
+.w-100{
+    width: 100%;
+}
+
 @media screen and (max-width: 767px) {
     .gridlist {
         grid-template-columns: repeat(1, 1fr);
